changed to only student council head

--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -409,7 +409,7 @@
             </div>
           </div>
           <div class="contact-area">
-            <h4>Ashish Shetty (E-CELL Student Council head)</h4>
+            <h4>Ashish Shetty (Student Council head)</h4>
             <div class="email-area">
               <i class="bi bi-envelope-fill"></i>
               <a href="mailto:ashish.shetty@sakec.ac.in" style="color: #d7c9c9;">ashish.shetty@sakec.ac.in</a>
