minor case changes

--- a/events/index.html
+++ b/events/index.html
@@ -29,7 +29,7 @@
        
         <ul class="links">
             <li> <a href="../index.html#home">Home </a> </li>
-            <li> <a href="../index.html#about">About us </a> </li>
+            <li> <a href="../index.html#about">About Us </a> </li>
             <li> <a href="../index.html#objective">Objectives</a> </li>
             <li> <a href="#">Events </a> </li>
             <li> <a href="../index.html#testimony">Testimony</a> </li>
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="contact-card">
-                    <h4>Ashish Shetty (Student Council head)</h4>
+                    <h4>Ashish Shetty (Student Council Head)</h4>
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
