--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
        
         <ul class="links">
             <li> <a href="#home">Home </a> </li>
-                <li> <a href="#about">About us </a> </li>
+                <li> <a href="#about">About Us </a> </li>
                 <li> <a href="#objective">Objectives</a> </li>
                 <li> <a href="./events/index.html">Events </a> </li>
                 <li> <a href="#testimony">Testimony</a> </li>
@@ -238,7 +238,7 @@
                     </div>
     
                     <div class="contact-card">
-                        <h4>Ashish Shetty (Student Council head)</h4>
+                        <h4>Ashish Shetty (Student Council Head)</h4>
                         <div class="contact-content">
                             <div class="email-area">
                                 <i class="bi bi-envelope-fill"></i>
