timeline and incentives change

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -180,18 +180,17 @@
         <section id="incentives">
             <h1 data-aos="fade-up">Incentives</h1>
             <div class="incentives-wrapper" data-aos="fade-up" data-aos-delay="80">
-                <!-- Make connections with VCs -->
+                <!-- Networking -->
                 <div class="cards">
                     <div class="card-img-cont">
                         <img src="./src/assets/svg/incentitives/Finding brilliant ideas-pana.svg" alt="" width="100%"
                             height="100%">
                     </div>
                     <div class="cards-details">
-                        <h4>Make connections with VCs</h4>
+                        <h4>Networking</h4>
                         <p>
                             Make connections with leading industrialists and venture capitalists who are willing to help
-                            you along the
-                            way.
+                            you along the way.
                         </p>
                     </div>
                     <p> </p>
@@ -209,17 +208,17 @@
                         </p>
                     </div>
                 </div>
-                <!-- Consult with Mentors -->
+                <!-- Customer Acquisition -->
                 <div class="cards">
                     <div class="card-img-cont">
                         <img src="./src/assets/svg/incentitives/Business deal-pana.svg" alt="" width="100%"
                             height="100%">
                     </div>
                     <div class="cards-details">
-                        <h4>Consult with Mentors</h4>
+                        <h4>Customer Acquisition</h4>
                         <p>
-                            Get the chance to consult with and acquire guidance from an esteemed mentor on our
-                            distinguished panel.
+                            Create a firm foothold in the market, by developing a larger customer base and consequently
+                            increasing revenue.
                         </p>
                     </div>
                 </div>
@@ -231,9 +230,8 @@
                     </div>
                     <div class="cards-details">
                         <h4>Proof Of Concept</h4>
-                        <p>Find out whether your startup has the potential for real-world application and whether it is
-                            feasible enough to justify
-                            the expenses needed to support and develop it. </p>
+                        <p>Find out whether your startup is feasible enough to justify the expenses needed to support
+                            and develop it.</p>
                     </div>
                 </div>
             </div>
@@ -301,7 +299,7 @@
                     </section>
                 </div>
 
-                <!-- Workshop -->
+                <!-- Proof of Concept -->
 
                 <div class="row row-3">
                     <div class="icons icons-3">
@@ -309,16 +307,15 @@
                     </div>
                     <section id="phase-3" data-aos-delay="90" data-aos-duration="800">
                         <div class="details">
-                            <span class="title">Workshop</span>
+                            <span class="title">Proof of concept</span>
                             <!-- <span>
                 3rd oct 2022
               </span> -->
                         </div>
                         <p>
-                            In this workshop, you will get the required and effective mentorship to dive into funding
-                            strategies and
-                            pitching tips
-                            to attract mentors.
+                            Find out whether your startup has the potential for real-world application and whether it is
+                            feasible enough to justify
+                            the expenses needed to support and develop it.
                         </p>
                         <!-- <div class="bottom"><a href="#">
                 learn more
@@ -326,31 +323,6 @@
                     </section>
                 </div>
 
-                <!-- Mock Pitch -->
-
-                <div class="row row-4">
-                    <div class="icons icons-4">
-                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
-                    </div>
-                    <section id="phase-4" data-aos-delay="100" data-aos-duration="800">
-                        <div class="details">
-                            <span class="title">Mock Pitch</span>
-                            <!-- <span>
-                2nd oct 2022
-              </span> -->
-                        </div>
-                        <p>
-                            A practice/mock round where you will pitch your ideas to the mentors and improve your
-                            pitching skills
-                            under their
-                            guidance.
-                            be charged after the authentication.
-                        </p>
-                        <!-- <div class="bottom"><a href="#">
-                learn more
-              </a> </div> -->
-                    </section>
-                </div>
 
                 <!-- Final Pitch -->
 
@@ -404,11 +376,7 @@
                 </div>
 
                 <div class="contact-card">
-<<<<<<< Updated upstream
                     <h4>Ashish Shetty (Student Council head)</h4>
-=======
-                    <h4>Ashish Shetty (ECELL-SAKEC Student Council Head)</h4>
->>>>>>> Stashed changes
                     <div class="contact-content">
                         <div class="email-area">
                             <i class="bi bi-envelope-fill"></i>
@@ -453,7 +421,7 @@
                 </a>
             </div>
             <h5>
-                entreupreneurship and innovation cell | SAKEC
+                entrepreneurship and innovation cell | SAKEC
             </h5>
         </div>
     </footer>
