customer incentives img change

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -211,8 +211,8 @@
                 <!-- Customer Acquisition -->
                 <div class="cards">
                     <div class="card-img-cont">
-                        <img src="./src/assets/svg/incentitives/Business deal-pana.svg" alt="" width="100%"
-                            height="100%">
+                        <img src="./src/assets/svg/incentitives/Customer relationship management-pana.svg" alt=""
+                            width="100%" height="100%">
                     </div>
                     <div class="cards-details">
                         <h4>Customer Acquisition</h4>
