--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
     <link rel="stylesheet" href="./src/css/hero.css">
     <link rel="stylesheet" href="./src/css/testim.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://md-aqil.github.io/images/swiper.min.css">
-
     <!--jQuery CDN-->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
@@ -261,7 +258,7 @@
                 </div>
             </div>
         </section>
-        <script src="/testim.js"></script>
+        <script src="./src/javascript/testim.js"></script>
         <script src="https://md-aqil.github.io/images/swiper.min.js"></script>
 
 
