sponsorship  comment out

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -240,9 +240,9 @@
 
         <!--Sponors-->
 
-        <section id="sponsors">
+        <!-- <section id="sponsors">
             <h1>Our Sponsors</h1>
-        </section>
+        </section> -->
 
         <!-- Timeline -->
 
