updated testimony section on home page

--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/src/assets/icon/e_cell_logo.png" />
+    <link rel="icon" type="image/svg+xml" href="../common/img/e_cell_logo_BLACK_WHITE_BG.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Pillar</title>
@@ -22,25 +22,28 @@
 
             <div id="nav-header" class="nav-header">
                 <div style="display: flex;gap:0 2em">
+                    <!-- SAKEC_LOGO_WHITE -->
                     <div class="logo">
                         <a href="https://www.shahandanchor.com/home/" target="_blank">
-                        <img src="../common/img/sakec_logo_BLACK.png" alt="sakec ecell logo" width="100%"
-                            height="100%" />
+                            <img src="../common/img/sakec_logo_BLACK.png" alt="sakec ecell logo" width="100%"
+                                height="100%" />
                         </a>
                     </div>
+                    <!-- ECELLSAKEC LOGO -->
                     <div class="logo">
                         <a href="../index.html">
-                        <img src="../common/img/e_cell_logo_BLACK.png" alt="sakec ecell logo" width="100%"
-                            height="100%" />
+                            <img src="../common/img/e_cell_logo_BLACK.png" alt="sakec ecell logo" width="100%"
+                                height="100%" />
                         </a>
                     </div>
 
                 </div>
-
+                <!-- Navbar toggle for mobile devices -->
                 <div id="toggle" class="nav-toggle">
                     <span id="toggle-span"></span><span id="toggle-span"></span><span id="toggle-span"></span>
                 </div>
             </div>
+            <!--Navigation Links-->
             <ul id="nav-links" class="nav-links-disable">
                 <li> <a id="nav-a" href="../index.html">Home </a> </li>
                 <li> <a id="nav-a" href="#about">About </a> </li>
@@ -49,8 +52,7 @@
                 <li> <a id="nav-a" href="#timeline">Timeline </a> </li>
                 <!-- <li> <a id="nav-a" href="#registration">Registration </a> </li> -->
                 <li> <a id="nav-a" href="#contact">Contact Us </a> </li>
-                <li> <a id="nav-a" href="./faq/index.html" target="_blank"
-                        rel="noopener noreferrer">FAQ</a></li>
+                <li> <a id="nav-a" href="./faq/index.html" target="_blank" rel="noopener noreferrer">FAQ</a></li>
             </ul>
         </div>
     </nav>
@@ -62,16 +64,12 @@
         <!-- Hero Area -->
 
         <section id="home">
-
-            <!-- Hero Image -->
-
             <div class="home-wrapper">
+                <!-- Hero Image -->
                 <div class="hero-img">
                     <img src="./src/assets/svg/Project-Pillar-Logo.svg" alt="" height="100%" width="100%">
                 </div>
-
                 <!-- Count Down to Event  -->
-
                 <div class="counter-wrapper">
                     <h2> <span>Starts In</span></h2>
                     <div class="container">
@@ -135,7 +133,7 @@
                     </div>
                 </div>
 
-                <!-- Scroll down Animated -->
+                <!-- Scroll down Animation -->
 
                 <div class="scroll-down">
                     <a href="#timeline">Scroll Down To Register</a>
@@ -182,18 +180,17 @@
         <section id="incentives">
             <h1 data-aos="fade-up">Incentives</h1>
             <div class="incentives-wrapper" data-aos="fade-up" data-aos-delay="80">
-                <!-- Make connections with VCs -->
+                <!-- Networking -->
                 <div class="cards">
                     <div class="card-img-cont">
                         <img src="./src/assets/svg/incentitives/Finding brilliant ideas-pana.svg" alt="" width="100%"
                             height="100%">
                     </div>
                     <div class="cards-details">
-                        <h4>Make connections with VCs</h4>
+                        <h4>Networking</h4>
                         <p>
                             Make connections with leading industrialists and venture capitalists who are willing to help
-                            you along the
-                            way.
+                            you along the way.
                         </p>
                     </div>
                     <p> </p>
@@ -211,40 +208,41 @@
                         </p>
                     </div>
                 </div>
-                <!-- Consult with Mentors -->
+                <!-- Proof Of Concept -->
                 <div class="cards">
                     <div class="card-img-cont">
-                        <img src="./src/assets/svg/incentitives/Business deal-pana.svg" alt="" width="100%"
+                        <img src="./src/assets/svg/incentitives/Consultative sales-pana.svg" alt="" width="100%"
                             height="100%">
                     </div>
                     <div class="cards-details">
-                        <h4>Consult with Mentors</h4>
+                        <h4>Proof Of Concept</h4>
+                        <p>Find out whether your startup is feasible enough to justify the expenses needed to support
+                            and develop it.</p>
+                    </div>
+                </div>
+                <!-- Customer Acquisition -->
+                <div class="cards">
+                    <div class="card-img-cont">
+                        <img src="./src/assets/svg/incentitives/Customer relationship management-pana.svg" alt=""
+                            width="100%" height="100%">
+                    </div>
+                    <div class="cards-details">
+                        <h4>Customer Acquisition</h4>
                         <p>
-                            Get the chance to consult with and acquire guidance from an esteemed mentor on our
-                            distinguished panel.
+                            Create a firm foothold in the market, by developing a larger customer base and consequently
+                            increasing revenue.
                         </p>
                     </div>
                 </div>
-                <!-- Secure your startup -->
-                <div class="cards">
-                    <div class="card-img-cont">
-                        <img src="./src/assets/svg/incentitives/At the office-pana.svg" alt="" width="100%"
-                            height="100%">
-                    </div>
-                    <div class="cards-details">
-                        <h4>Secure your incubators</h4>
-                        <p>Secure a position in reputable incubation that will support you along the way until your
-                            startup takes off and becomes successful. </p>
-                    </div>
-                </div>
+
             </div>
         </section>
 
         <!--Sponors-->
 
-        <section id="sponsors">
+        <!-- <section id="sponsors">
             <h1>Our Sponsors</h1>
-        </section>
+        </section> -->
 
         <!-- Timeline -->
 
@@ -302,7 +300,7 @@
                     </section>
                 </div>
 
-                <!-- Workshop -->
+                <!-- Proof of Concept -->
 
                 <div class="row row-3">
                     <div class="icons icons-3">
@@ -310,16 +308,15 @@
                     </div>
                     <section id="phase-3" data-aos-delay="90" data-aos-duration="800">
                         <div class="details">
-                            <span class="title">Workshop</span>
+                            <span class="title">Proof of concept</span>
                             <!-- <span>
                 3rd oct 2022
               </span> -->
                         </div>
                         <p>
-                            In this workshop, you will get the required and effective mentorship to dive into funding
-                            strategies and
-                            pitching tips
-                            to attract mentors.
+                            Find out whether your startup has the potential for real-world application and whether it is
+                            feasible enough to justify
+                            the expenses needed to support and develop it.
                         </p>
                         <!-- <div class="bottom"><a href="#">
                 learn more
@@ -327,35 +324,10 @@
                     </section>
                 </div>
 
-                <!-- Mock Pitch -->
-
-                <div class="row row-4">
-                    <div class="icons icons-4">
-                        <img src="./src/assets/icon/location.svg" alt="" width="100%" height="65%" />
-                    </div>
-                    <section id="phase-4" data-aos-delay="100" data-aos-duration="800">
-                        <div class="details">
-                            <span class="title">Mock Pitch</span>
-                            <!-- <span>
-                2nd oct 2022
-              </span> -->
-                        </div>
-                        <p>
-                            A practice/mock round where you will pitch your ideas to the mentors and improve your
-                            pitching skills
-                            under their
-                            guidance.
-                            be charged after the authentication.
-                        </p>
-                        <!-- <div class="bottom"><a href="#">
-                learn more
-              </a> </div> -->
-                    </section>
-                </div>
 
                 <!-- Final Pitch -->
 
-                <div class="row row-5">
+                <div class="row row-4">
                     <div class="icons icons-5">
                         <img src="./src/assets/svg/finish-flag 1.svg" alt="" width="100%" height="65%" />
                     </div>
@@ -424,7 +396,7 @@
                     <h4>For Other Queries Contact Us At :</h4>
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
-                        <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
+                        <a href="mailto:info@ecellsakec.in" style="color: #292f36;">info@ecellsakec.in</a>
                     </div>
                     <div class="phone-area">
                         <!-- <i class="bi bi-telephone-fill"></i> -->
@@ -450,7 +422,7 @@
                 </a>
             </div>
             <h5>
-                entreupreneurship and innovation cell | SAKEC
+                entrepreneurship and innovation cell | SAKEC
             </h5>
         </div>
     </footer>
