--- a/faq/index.html
+++ b/faq/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ECELL | FAQ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/svg+xml" href="../common/img/e_cell_logo_BLACK_WHITE_BG.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
@@ -192,7 +193,7 @@
                   <h4>For Other Queries Contact Us At :</h4>
                   <div class="email-area">
                       <i class="bi bi-envelope-fill"></i>
-                      <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
+                      <a href="mailto:info@ecellsakec.in" style="color: #292f36;">info@ecellsakec.in</a>
                   </div>
                   <div class="phone-area">
                       <!-- <i class="bi bi-telephone-fill"></i> -->
