change fix on testimony

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
             
 
         <!-- TESTIMONY SECTION  -->    
-        <section class="testimony" id="testimony">
-            <h1>Testimonials</h1>
+        <section class="section" id="section--3">
+  
             <div class="slider">
               <div class="slide slide--1">
                 <div class="testimonial">
@@ -179,9 +179,9 @@
                         program to anyone diving into entprepreneurship.
                   </blockquote>
                   <address class="testimonial__author">
-                    <img src="/src/assets/images/Testimony.JPG" alt="" class="testimonial__photo" />
-                    <h6 class="testimonial__name">Rushikesh Gaikwad</h6>
-                    <p class="testimonial__position">Shark Tank 2020 Participant</p>
+                    <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="" class="testimonial__photo" />
+                    <h6 class="testimonial__name">Aarav Lynn</h6>
+                    <p class="testimonial__location">San Francisco, USA</p>
                   </address>
                 </div>
               </div>
@@ -201,7 +201,7 @@
                   <address class="testimonial__author">
                     <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="" class="testimonial__photo" />
                     <h6 class="testimonial__name">Miyah Miles</h6>
-                    <p class="testimonial__position">London, UK</p>
+                    <p class="testimonial__location">London, UK</p>
                   </address>
                 </div>
               </div>
@@ -222,7 +222,7 @@
                   <address class="testimonial__author">
                     <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="" class="testimonial__photo" />
                     <h6 class="testimonial__name">Francisco Gomes</h6>
-                    <p class="testimonial__position">Lisbon, Portugal</p>
+                    <p class="testimonial__location">Lisbon, Portugal</p>
                   </address>
                 </div>
               </div>
