minor changes on home page

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
             
 
         <!-- TESTIMONY SECTION  -->    
-        <section class="section" id="section--3">
-  
+        <section class="testimony" id="testimony">
+            <h1>Testimonials</h1>
             <div class="slider">
               <div class="slide slide--1">
                 <div class="testimonial">
@@ -180,8 +180,8 @@
                   </blockquote>
                   <address class="testimonial__author">
                     <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="" class="testimonial__photo" />
-                    <h6 class="testimonial__name">Aarav Lynn</h6>
-                    <p class="testimonial__location">San Francisco, USA</p>
+                    <h6 class="testimonial__name">Rushikesh Gaikwad</h6>
+                    <p class="testimonial__location">Shark Tank 2020 Participant</p>
                   </address>
                 </div>
               </div>
@@ -331,7 +331,7 @@
                     </a>
                 </div>
                 <h5>
-                    entreupreneurship and innovation cell | SAKEC
+                    entrepreneurship and innovation cell | SAKEC
                 </h5>
             </div>
         </footer>
