added content for testimonies

--- a/index.html
+++ b/index.html
@@ -192,16 +192,14 @@
                     The last step to becoming a complete minimalist
                   </h5>
                   <blockquote class="testimonial__text">
-                    Quisquam itaque deserunt ullam, quia ea repellendus provident,
-                    ducimus neque ipsam modi voluptatibus doloremque, corrupti
-                    laborum. Incidunt numquam perferendis veritatis neque repellendus.
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-                    deserunt exercitationem deleniti.
+                    Shark tank 2020 , held by the team of E cell Sakec was one of a kind of an experience for us as budding entrepreneurs.
+                    Discussions with the panel was really insightful and helped us get a few reality checks with respect to the actual market and how people think. 
+                    Every college must have such sessions which will help them grow to think as professionals and make them market ready!!
                   </blockquote>
                   <address class="testimonial__author">
                     <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="" class="testimonial__photo" />
-                    <h6 class="testimonial__name">Miyah Miles</h6>
-                    <p class="testimonial__location">London, UK</p>
+                    <h6 class="testimonial__name">Kaushik Iyengar</h6>
+                    <p class="testimonial__location">White Pocket</p>
                   </address>
                 </div>
               </div>
@@ -212,17 +210,16 @@
                     Finally free from old-school banks
                   </h5>
                   <blockquote class="testimonial__text">
-                    Debitis, nihil sit minus suscipit magni aperiam vel tenetur
-                    incidunt commodi architecto numquam omnis nulla autem,
-                    necessitatibus blanditiis modi similique quidem. Odio aliquam
-                    culpa dicta beatae quod maiores ipsa minus consequatur error sunt,
-                    deleniti saepe aliquid quos inventore sequi. Necessitatibus id
-                    alias reiciendis, perferendis facere.
+                    Hey, I am Aaryan Mehta and I had participated in the Shark Tank 2020. The event was very well planned and over the course of this event, we learned a lot about entrepreneurship. 
+                    We had a session wherein we were asked to pitch a product to a panel of judges. This was a literal simulation of the original Shark Tank event that's shown on our television. 
+                    The panel of judges selected by the organisers was simply outstanding. All of the judges had multiple years of entrepreneurship experience and were more than happy to guide us and share their valuable insights. 
+                    This was definitely one of the best events I have attend in SAKEC since I had loads of fun and gained plenty of knowledge too. Hats off to the organizers for their efforts!
                   </blockquote>
                   <address class="testimonial__author">
                     <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="" class="testimonial__photo" />
-                    <h6 class="testimonial__name">Francisco Gomes</h6>
-                    <p class="testimonial__location">Lisbon, Portugal</p>
+                    <h6 class="testimonial__name">Aaryan Mehta</h6>
+                    <p class="testimonial__location">ApolLearn
+                        Shark Tank 2020</p>
                   </address>
                 </div>
               </div>
