--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         program to anyone diving into entprepreneurship.
                   </blockquote>
                   <address class="testimonial__author">
-                    <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="" class="testimonial__photo" />
+                    <img src="/src/assets/images/Testimony.JPG" alt="" class="testimonial__photo" />
                     <h6 class="testimonial__name">Rushikesh Gaikwad</h6>
                     <p class="testimonial__location">Shark Tank 2020 Participant</p>
                   </address>
@@ -197,7 +197,7 @@
                     Every college must have such sessions which will help them grow to think as professionals and make them market ready!!
                   </blockquote>
                   <address class="testimonial__author">
-                    <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="" class="testimonial__photo" />
+                    <img src="/src/assets/images/testim-1.jpeg" alt="" class="testimonial__photo" />
                     <h6 class="testimonial__name">Kaushik Iyengar</h6>
                     <p class="testimonial__location">White Pocket</p>
                   </address>
