--- a/team/index.html
+++ b/team/index.html
@@ -1818,7 +1818,7 @@
                     <h4>For Other Queries Contact Us At :</h4>
                     <div class="email-area">
                         <i class="bi bi-envelope-fill"></i>
-                        <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">ecell@sakec.ac.in</a>
+                        <a href="mailto:ecell@sakec.ac.in" style="color: #292f36;">info@ecellsakec.in</a>
                     </div>
                     <div class="phone-area">
                         <!-- <i class="bi bi-telephone-fill"></i> -->
