project pillar and home page sentence changes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     shape them for the industry. Organising boot-camps, startup programs and creating awareness on
                     financial aid
                     schemes from the government is our primary objective. E-CELL SAKEC believes in the chant “YES!! IT’S
-                    POSSIBLE.
+                    POSSIBLE.”
                     Join us on this endeavour now!!
                 </p>
     </section>
