--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -48,7 +48,7 @@
                 <li> <a id="nav-a" href="../index.html">Home </a> </li>
                 <li> <a id="nav-a" href="#about">About </a> </li>
                 <li> <a id="nav-a" href="#incentives">Incentives</a> </li>
-                <li> <a id="nav-a" href="#sponsors">Sponsors </a> </li>
+                <!-- <li> <a id="nav-a" href="#sponsors">Sponsors </a> </li> -->
                 <li> <a id="nav-a" href="#timeline">Timeline </a> </li>
                 <!-- <li> <a id="nav-a" href="#registration">Registration </a> </li> -->
                 <li> <a id="nav-a" href="#contact">Contact Us </a> </li>
@@ -168,7 +168,7 @@
                 stereotypes and pursuing audacious goals. If you have what it takes to transform a good idea into a
                 viable
                 business with
-                the assistance of a mentor/investor, apply for this event and find a pillar that will support your
+                aid from an investor, apply for this event and find a pillar that will support your
                 project to
                 the
                 heights you’ve always dreamt of.
@@ -291,7 +291,7 @@
                         <p>
                             Your pre-registration details will be verified and your startup particulars will be
                             authenticated by our
-                            team. Fees will
+                            team. A stipulated registration fee will
                             be charged after the authentication.
                         </p>
                         <!-- <div class="bottom"><a href="#">
