nav bar closes when links clicked

--- a/index.html
+++ b/index.html
@@ -343,7 +343,8 @@
                 </h5>
             </div>
         </footer>
-
+        <script src="./common/js/nav.js"></script>
 </body>
 <script src="./src/javascript/contactus.js"></script>
+
 </html>
