--- a/projectpillar/faq/index.html
+++ b/projectpillar/faq/index.html
@@ -270,5 +270,6 @@
             // $(location.hash + ".collapse")
         }
     </script>
+    <script src="../../common/js/nav.js"></script>
 </body>
 </html>
