--- a/faq/index.html
+++ b/faq/index.html
@@ -232,5 +232,6 @@
             // $(location.hash + ".collapse")
         }
     </script>
+    <script src="../common/js/nav.js"></script>
 </body>
 </html>
