--- a/team/index.html
+++ b/team/index.html
@@ -1851,6 +1851,7 @@
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="../common/js/nav.js"></script>
 </body>
 
 </html>
