--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -9,7 +9,7 @@
   <title>FoodFiesta</title>
   <link rel="icon" type="image/svg+xml" href="../common/img/e_cell_logo_BLACK_WHITE_BG.png" />
   <meta name="description" content="FoodFiesta">
-  <meta name="keywords" content="FoodFiesta,About,Jury,Winners,Sakec">
+  <meta name="keywords" content="FoodFiesta,Sakec,ecellsakec,ecell,Entrepreneurship">
 
 
 <link rel="stylesheet" href="./asset/css/style.css">
@@ -78,7 +78,7 @@
 
 <section class="spon" id="spon">
   <div class="spon-wrap">
-      <h1>Thank you to our Sponsors</h1>
+      <h1>Thank you to our Sponsors !!!</h1>
       <hr/>
       <div class="spon-in">
           <ul>
@@ -86,11 +86,11 @@
               <a><img src="./asset/img/logos/spon-logo/medical_care_logo_template_social_media_-removebg-preview.png" alt="" /></a>
           </li>
               <li>
-                  <a><img src="./asset/img/logos/spon-logo/Copy_of_Millionaire_Kids_Club_2.png" alt="" />
+                  <a ><img src="./asset/img/logos/spon-logo/Copy_of_Millionaire_Kids_Club_2.png" alt="" />
                </a>
               </li>
               <li>
-                <a><img src="./asset/img/logos/spon-logo/logo2.png" alt="" />
+                <a ><img src="./asset/img/logos/spon-logo/logo2.png" alt="" />
                </a>
             </li>
             
