--- a/projectpillar/faq/index.html
+++ b/projectpillar/faq/index.html
@@ -33,6 +33,7 @@
    
     <ul class="links">
       <li> <a id="nav-a" href="../../index.html">Home </a> </li>
+      <li><a href="../events/index.html">Events</a></li>
         <li> <a id="nav-a" href="../index.html#about">About </a> </li>
         <li> <a id="nav-a" href="../index.html#incentives">Incentives</a> </li>
         <li> <a id="nav-a" href="../index.html#sponsors">Sponsors </a> </li>
