--- a/projectpillar/index.html
+++ b/projectpillar/index.html
@@ -46,6 +46,7 @@
             <!--Navigation Links-->
             <ul id="nav-links" class="nav-links-disable">
                 <li> <a id="nav-a" href="../index.html">Home </a> </li>
+                <li><a href="../events/index.html">Events</a></li>
                 <li> <a id="nav-a" href="#about">About </a> </li>
                 <li> <a id="nav-a" href="#incentives">Incentives</a> </li>
                 <!-- <li> <a id="nav-a" href="#sponsors">Sponsors </a> </li> -->
