--- a/team/index.html
+++ b/team/index.html
@@ -34,6 +34,7 @@
 
         <ul class="links">
             <li> <a href="#home">Home </a> </li>
+            <li><a href="../events/index.html">Events</a></li>
             <li> <a href="#about">About Us </a> </li>
             <li> <a href="#objective">Objectives</a> </li>
             <li> <a href="./events/index.html">Events </a> </li>
