--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -11,13 +11,15 @@
   <meta name="description" content="FoodFiesta">
   <meta name="keywords" content="FoodFiesta,About,Jury,Winners,Sakec">
 
-
 <link rel="stylesheet" href="./asset/css/style.css">
+<link rel="stylesheet" href="../common/css/footer.css">
+<link rel="stylesheet" href="../common/css/reset.css">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> 
+
 
 </head>
 <body>
@@ -401,68 +403,70 @@
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 <footer id="contact">
-    <div class="footer-wrapper">
-      <h3 style="color: #eae0e0;">
-        Get in touch with us
-      </h3>
-
-      <div class="footer-contact">
-        <div class="email-footer">
-          <div class="contact-area">
-            <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
-            <div class="email-area">
-              <i class="bi bi-envelope-fill"></i>
-              <a href="mailto:milind.khairnar@sakec.ac.in" style="color: #d7c9c9;">milind.khairnar@sakec.ac.in</a>
-            </div>
-            <div class="phone-area">
-              <i class="bi bi-telephone-fill"></i>
-              <p>+91 93223 19066</p>
-            </div>
+  <div class="footer-wrapper">
+      <h1>Get in touch with us</h1>
+      <div class="contact-wrapper">
+          <div class="contact-card">
+              <h4>Prof. Milind Khairnar (Faculty Incharge)</h4>
+              <div class="email-area">
+                  <i class="bi bi-envelope-fill"></i>
+                  <a href="mailto:milind.khairnar@sakec.ac.in" style="color: #292f36;">milind.khairnar@sakec.ac.in</a>
+              </div>
+              <div class="phone-area">
+                  <i class="bi bi-telephone-fill"></i>
+                  <p>+91 93223 19066</p>
+              </div>
           </div>
-          <div class="contact-area">
 
-            <h4>Ashish Shetty (Student Council head)</h4>
+          <div class="contact-card">
+              <h4>Ashish Shetty (Student Council Head)</h4>
+              <div class="contact-content">
+                  <div class="email-area">
+                      <i class="bi bi-envelope-fill"></i>
+                      <a href="mailto:ashish.shetty@sakec.ac.in" style="color: #292f36;">ashish.shetty@sakec.ac.in</a>
+                  </div>
+                  <div class="phone-area">
+                      <i class="bi bi-telephone-fill"></i>
+                      <p>+91 77150 22166</p>
+                  </div>
+              </div>
 
-            <div class="email-area">
-              <i class="bi bi-envelope-fill"></i>
-              <a href="mailto:ashish.shetty@sakec.ac.in" style="color: #d7c9c9;">ashish.shetty@sakec.ac.in</a>
-            </div>
-            <div class="phone-area">
-              <i class="bi bi-telephone-fill"></i>
-              <p>+91 77150 22166</p>
-            </div>
           </div>
-          <div class="contact-area">
-            <h4>For other queries : </h4>
-            <div class="email-area">
-              <i class="bi bi-envelope-fill"></i>
-              <a href="mailto:info@ecellsakec.in" style="color: #d7c9c9;">info@ecellsakec.in</a>
-            </div>
+
+          <div class="contact-card">
+              <h4>For Other Queries Contact Us At :</h4>
+              <div class="email-area">
+                  <i class="bi bi-envelope-fill"></i>
+                  <a href="mailto:info@ecellsakec.in" style="color: #292f36;">info@ecellsakec.in</a>
+              </div>
+              <div class="phone-area">
+                  <!-- <i class="bi bi-telephone-fill"></i> -->
+                  <!-- <p>+91 93223 19066</p> -->
+              </div>
           </div>
-        </div>
-      </div> 
-    </div>
-    <div class="footer-ecell">
+      </div>
+  </div>
+  <div class="footer-ecell">
       <div class="social-media">
-        <a class="social-media-cont" href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y">
-          <i class="bi bi-instagram "></i>
-        </a>
-        <a class="social-media-cont" href="https://m.facebook.com/100410025256433/">
-          <!-- <a href=""></a> -->
-          <i class="bi bi-facebook"></i>
-        </a>
-        <a class="social-media-cont" href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ">
-          <i class="bi bi-youtube"></i>
-        </a>
-        <a class="social-media-cont" href="https://www.linkedin.com/showcase/e-cell-sakec">
-          <i class="bi bi-linkedin"></i>
-        </a>
+          <a class="social-media-cont" href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y">
+              <i class="bi bi-instagram "></i>
+          </a>
+          <a class="social-media-cont" href="https://m.facebook.com/100410025256433/">
+              <!-- <a href=""></a> -->
+              <i class="bi bi-facebook"></i>
+          </a>
+          <a class="social-media-cont" href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ">
+              <i class="bi bi-youtube"></i>
+          </a>
+          <a class="social-media-cont" href="https://www.linkedin.com/showcase/e-cell-sakec">
+              <i class="bi bi-linkedin"></i>
+          </a>
       </div>
       <h5>
-        Entrepreneurship and Innovation Cell | SAKEC
+          entrepreneurship and innovation cell | SAKEC
       </h5>
-    </div>
-  </footer>
+  </div>
+</footer>
 
   <script src="../common/js/nav.js"></script>
 </body>
