ff page now uses same nav bar and footer as every page

--- a/events/index.html
+++ b/events/index.html
@@ -249,7 +249,7 @@
                 </a>
             </div>
             <h5>
-                entreupreneurship and innovation cell | SAKEC
+                entrepreneurship and innovation cell | SAKEC
             </h5>
         </div>
     </footer>
