--- a/events/index.html
+++ b/events/index.html
@@ -72,9 +72,9 @@
                 <a href="https://open.spotify.com/show/3OSAraUUX2OgsY8hstzd4l?si=iHybg1G7Tr6IBPd6gnGcGw&utm_source=copy-link "><img src='/events/img/spotify-logo.png' class="podcast-icons"></a>
                 <a href="https://music.amazon.in/podcasts/414fb720-24ed-4c12-90bf-05ded48178fc/epitome-of-leaders?ref=dm_sh_RyfO52I8BmyNw4e06ZIoNOrbq "><img src='./img/amusic.png' class="podcast-icons"></a>
             </div>
-            <p class="read-more ">
+            <!-- <p class="read-more ">
                 <a href="# " target="_blank ">Read More <i class="bi bi-arrow-right-short " style="color: green; "></i></a>
-            </p>
+            </p> -->
         </div>
     </div>
     <div class="blog-card alt">
