Testimony Headers Updated

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="testimonial">
                     <img src="./src/assets/images/testim-rushikesh.JPG" alt="" class="testimonial__photo" />
                 <div>
-                  <h5 class="testimonial__header">Best financial decision ever!</h5>
+                  <h5 class="testimonial__header">Great Overview For Developing Concepts For New Ventures</h5>
                   <blockquote class="testimonial__text">
                     This is a great overview of getting started in developing concepts for new ventures. With
                         decades of innovation experience, more than half in startups, this was a worthwhile investment
@@ -194,7 +194,7 @@
                     <img src="./src/assets/images/testim-kaushik-2.jpeg" alt="" class="testimonial__photo" />
                 <div>
                   <h5 class="testimonial__header">
-                    The last step to becoming a complete minimalist
+                    Insightful Discussions Helped Us Get Reality Checks
                   </h5>
                   <blockquote class="testimonial__text">
                     Shark tank 2020 , held by the team of E cell Sakec was one of a kind of an experience for us as budding entrepreneurs.
@@ -216,7 +216,7 @@
                     <img src="./src/assets/images/testim-aryan.jpeg" alt="" class="testimonial__photo" />
                 <div>
                   <h5 class="testimonial__header">
-                    Finally free from old-school banks
+                    Multiple Years Of Their Entrepreneurship Experience Helped Guide Us
                   </h5>
                   <blockquote class="testimonial__text">
                     Hey, I am Aaryan Mehta and I had participated in the Shark Tank 2020. The event was very well planned and over the course of this event, we learned a lot about entrepreneurship. 
