--- a/foodfiesta/index.html
+++ b/foodfiesta/index.html
@@ -360,10 +360,15 @@
   <img class="thumb placeholder" src="./asset/img/gallery-img/10.jpeg" data-src="./asset/img/gallery-img/10.jpeg" data-image="./asset/img/gallery-img/10.jpeg"  alt="">
   
 </div>
+
+
+<!--
 <div class="gallery-item item-4x3">
   <img class="thumb placeholder" src="./asset/img/gallery-img/18.jpeg" data-src="./asset/img/gallery-img/18.jpeg" data-image="./asset/img/gallery-img/18.jpeg"  alt="">
   
-</div>
+</div>-->
+
+
 
 <div class="gallery-item item-3x4">
   <img class="thumb placeholder" src="./asset/img/gallery-img/11.jpeg" data-src="./asset/img/gallery-img/11.jpeg" data-image="./asset/img/gallery-img/11.jpeg"  alt="">
