added register us section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./src/css/contact.css">
     <link rel="stylesheet" href="./src/css/hero.css">
     <link rel="stylesheet" href="./src/css/testim.css">
+    <link rel="stylesheet" href="./src/css/reg.css">
 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
@@ -246,6 +247,38 @@
           <script src="/src/javascript/testim.js"></script>
 
 
+  <section>
+    <h1 class="reg-title">
+        . . . . . Register Us . . . . .
+    </h1>
+            <div class="blog-card">
+                <div class="meta">
+                    <div class="photo" style="background-image: url('./src/assets/images/reg.png');"></div>
+                    <!--<ul class="details">
+                    <li class="author"><a href="#">John Doe</a></li>
+                    <li class="date">Aug. 24, 2015</li>
+                    <li class="tags">
+                        <ul>
+                            <li><a href="#">Learn</a></li>
+                            <li><a href="#">Code</a></li>
+                            <li><a href="#">HTML</a></li>
+                            <li><a href="#">CSS</a></li>
+                        </ul>
+                    </li>
+                </ul>-->
+                </div>
+                <div class="description">
+                    <h1>Excited to Join Us?</h1>
+    
+                    <p></p>
+                    <button class="button button2"><a  href='https://uptwocat.com/'><strong style="font-size: 30px; font-family: poppins; ">JOIN US</strong></a></button>
+    
+                    <!--<p class="read-more ">
+                    <a href="# " target="_blank ">Read More <i class="bi bi-arrow-right-short " style="color: green; "></i></a>
+                </p>-->
+                </div>
+            </div>
+        </section>
         <!-- CONTACT FORM SECTION  -->
 
         <section class="contact-info" id="contactus">
